@@ -20,6 +20,8 @@
 - fix issue #2 - propperly reconfigure the channels string coercion for rsync,
   so it can send from python2 to python3
 
+- refactor socketserver, so it can be directly remote_exec'd for starting a socket gateway on a remote
+
 1.0.9
 --------------------------------
 
